--- a/index.html
+++ b/index.html
@@ -20,18 +20,28 @@
 	<!-- FONTS -->
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-		
-	<!-- CSS -->
-	<link href="/css/rele.min.css" rel="stylesheet" type="text/css">
+	
+	<!-- CSS -->	
+	<link href="css/dist/codr.min.css" rel="stylesheet" type="text/css">	
 	
 	<!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 8]>
-    <script src="assets/plugins/modernizr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <![endif]-->
     
-    <link rel="shortcut icon" href="/img/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_180.png">
+    <link rel="shortcut icon" href="img/dist/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/dist/favicon_180.png">
 	
+	<!-- Google Analytics -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-64516156-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </head>
 <!-- END HEAD -->
 
@@ -42,16 +52,6 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
         Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
-    <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
-	  ga('create', 'UA-64516156-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
 	
 	<!-- START HEADER -->
 	<header id="home" class="hero parallax-yes">
@@ -113,7 +113,7 @@
 				<div class="row">		
 					<div class="col-md-5 match-height pp-wrapper">
 						<div class="profile-picture style-profile">
-							<img src="/img/profile.jpg" alt="profile picture" class="img-responsive"/>
+							<img src="img/dist/general/profile.jpg" alt="profile picture" class="img-responsive"/>
 						</div>
 					</div>					
 					<div class="col-md-7 match-height">
@@ -121,7 +121,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h2 class="section-title uppercase text-grey">Hello, I'm Pranav</h2>
-									<p class="section-subtitle text-grey">I am a software developer based in Northern New Jersey.</p>
+									<p class="section-subtitle text-grey">Software developer based in Northern New Jersey</p>
 									<span class="divider"></span>
 									<p class="text-dark">I hold a B.S. in Computer Science and Psychology from Montclair State University with minors in Mathematics and Cognitive Science. Yet, I am grateful to find myself in a ever evolving field. Climbing the asymptotic peak of knowledge is truly an exciting prospect that fuels my curious drive. Thus, I prefer to be keep learning and pushing the boundaries of my abilities.</p>
 								</div>
@@ -178,7 +178,7 @@
 					<div class="col-md-12 text-center">
 						<h2 class="section-title uppercase text-grey">My Work</h2>
 						<p class="section-subtitle text-grey">
-							Our creations are only as great as their ability to inspire others.
+							Our creations are only as great as their ability to inspire others
 						</p>
 						<span class="divider center"></span>
 					</div>
@@ -187,39 +187,59 @@
 		</div>
 	</section>	
 	<section class="work-carousel wow fadeIn">
-		<div class="item" style="background-image: url('/img/projects/gist2.jpg')">
+		<div class="item" style="background-image: url('img/dist/projects/codr/background.jpg')">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-4 col-md-push-8">
+						<div class="project-details">
+							<span class="project-name">Codr</span>
+							<span class="project-description">
+							Portfolio Theme</span>
+							<span class="divider"></span>
+							<a href="http://pranavrele.com/codr/" class="btn btn-outline-light">Live Demo <i class="fa fa-long-arrow-right fa-fw"></i></a>
+							<a href="https://github.com/pranavrele/codr" class="btn btn-outline-light">Source <i class="fa fa-code fa-fw"></i></a>
+						</div>
+					</div>
+					<div class="col-md-8 col-md-pull-4 hidden-xs">
+                        <img src="img/dist/projects/codr/image.png" class="img-responsive work-image" alt="codr">
+                    </div>
+				</div>
+			</div>
+		</div>
+		<div class="item" style="background-image: url('img/dist/projects/gist/background.jpg')">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-md-push-8">
 						<div class="project-details">
 							<span class="project-name">Gist</span>
-							<span class="project-description">Simple vCard theme</span>
+							<span class="project-description">
+							Minimalistic vCard Theme</span>
 							<span class="divider"></span>
 							<a href="http://pranavrele.com/gist/" class="btn btn-outline-light">Live Demo <i class="fa fa-long-arrow-right fa-fw"></i></a>
 							<a href="https://github.com/pranavrele/gist" class="btn btn-outline-light">Source <i class="fa fa-code fa-fw"></i></a>
 						</div>
 					</div>
 					<div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="/img/projects/gist1.png" class="img-responsive work-image" alt="gist">
+                        <img src="img/dist/projects/gist/image.png" class="img-responsive work-image" alt="gist">
                     </div>
 				</div>
 			</div>
 		</div>
-		<div class="item" style="background-color: rgba(187,10,0, 0.5) !important">
+		<div class="item" style="background-image: url('img/dist/projects/meta-jersey/background.jpg')">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-md-push-8">
 						<div class="project-details">
-							<span class="project-name">Meta - Jersey</span>
+							<span class="project-name">Meta-Jersey</span>
 							<span class="project-description">
 							Journalism tool to track census shifts in New Jersey</span>
-							<span class="divider bg-light"></span>
+							<span class="divider"></span>
 							<a href="http://pranavrele.com/meta-jersey-hosting/" class="btn btn-outline-light">Live Demo <i class="fa fa-long-arrow-right fa-fw"></i></a>
 							<a href="https://github.com/pranavrele/Meta-Jersey" class="btn btn-outline-light">Source <i class="fa fa-code fa-fw"></i></a>
 						</div>
 					</div>
 					<div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="/img/projects/meta-jersey1.png" class="img-responsive work-image" alt="meta-jersey">
+                        <img src="img/dist/projects/meta-jersey/image.png" class="img-responsive work-image" alt="meta-jersey">
                     </div>
 				</div>
 			</div>
@@ -235,7 +255,7 @@
 					<div class="col-md-12 text-center">
 						<h2 class="section-title uppercase text-grey">Let's Talk</h2>
 						<p class="section-subtitle text-grey">
-							I am currently available for hire.
+							I am currently available for hire
 						</p>
 						<span class="divider center"></span>
 					</div>
@@ -247,7 +267,7 @@
 		<div class="container section-wrapper">
 			<div class="section-content">
 				<div class="row text-center content-row">
-					<div class="col-xs-4 col-sm-3 col-md-3 col-lg-3 wow fadeIn" data-wow-delay=".2s">
+					<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 wow fadeIn" data-wow-delay=".1s">
 						<div class="about-content">
 							<a class="btn btn-round" href="mailto:pranavrele@gmail.com">
 								<i class="fa fa-envelope fa-2x fa-fw"></i>
@@ -255,7 +275,7 @@
 							<h3 class="text-dark">Mail</h3>
 						</div>	
 					</div>
-					<div class="col-xs-4 col-sm-3 col-md-3 col-lg-3 wow fadeIn" data-wow-delay=".4s">
+					<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 wow fadeIn" data-wow-delay=".2s">
 						<div class="about-content">
 							<a class="btn btn-round" href="https://github.com/pranavrele">
 								<i class="fa fa-github fa-2x fa-fw"></i>
@@ -263,7 +283,7 @@
 							<h3 class="text-dark">Github</h3>
 						</div>	
 					</div>
-					<div class="col-xs-4 col-sm-3 col-md-3 col-lg-3 wow fadeIn" data-wow-delay=".6s">
+					<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 wow fadeIn" data-wow-delay=".3s">
 						<div class="about-content">
 							<a class="btn btn-round" href="https://twitter.com/pranavrele">
 								<i class="fa fa-twitter fa-2x fa-fw"></i>
@@ -271,12 +291,28 @@
 							<h3 class="text-dark">Twitter</h3>
 						</div>	
 					</div>
-					<div class="col-xs-4 col-sm-3 col-md-3 col-lg-3 wow fadeIn" data-wow-delay=".8s">
+					<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 wow fadeIn" data-wow-delay=".4s">
 						<div class="about-content">
-							<a class="btn btn-round" href="https://www.linkedin.com/pub/pranav-rele/ab/a93/aa0">
+							<a class="btn btn-round" href="https://www.linkedin.com/in/pranavrele">
 								<i class="fa fa-linkedin fa-2x fa-fw"></i>
 							</a>
 							<h3 class="text-dark">LinkedIn</h3>
+						</div>	
+					</div>
+					<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 wow fadeIn" data-wow-delay=".5s">
+						<div class="about-content">
+							<a class="btn btn-round" href="https://dribbble.com/pranavrele">
+								<i class="fa fa-dribbble fa-2x fa-fw"></i>
+							</a>
+							<h3 class="text-dark">Dribbble</h3>
+						</div>	
+					</div>
+					<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 wow fadeIn" data-wow-delay=".6s">
+						<div class="about-content">
+							<a class="btn btn-round" href="https://instagram.com/pranavrele/">
+								<i class="fa fa-instagram fa-2x fa-fw"></i>
+							</a>
+							<h3 class="text-dark">Instagram</h3>
 						</div>	
 					</div>
 				</div>
@@ -305,10 +341,9 @@
 		</div>
 	</footer>
 	<!-- END FOOTER -->
-
-	<!-- START SCRIPT -->	
-	<script src="/js/rele-min.js"></script>
-	<!-- END SCRIPT -->
+	
+	<!-- JS -->
+	<script src="js/dist/codr.min.js"></script>
 
 </body>
 <!-- END BODY -->
