--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
    
 		<script src="js/jquery.min.js"></script>
-		<script src="js/min/gist-min.js"></script>
+		<!--script src="js/min/gist-min.js"></script-->
 		
 	</body>
 </html>
