--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="twitter:site" content="@pranavrele"/>
 	<meta name="twitter:title" content="Gist"/>
 	<meta name="twitter:description" content="vCard Template by Pranav Rele"/>
-	<meta name="twitter:image" content="pranavrele.com/img/profile.png"/>
+	<meta name="twitter:image" content="pranavrele.com/img/profile_twitter.png"/>
 	
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
@@ -23,7 +23,7 @@
 	<meta property="og:description" content="vCard Template by Pranav Rele">
 	<meta property="og:url" content="http://pranavrele.com/gist">
 	<meta property="og:site_name" content="Gist | vCard">
-	<meta property="og:image" content="pranavrele.com/img/profile.png">
+	<meta property="og:image" content="pranavrele.com/img/profile_og.jpg">
 	
 	<!-- Mobile -->
 	<meta name="HandheldFriendly" content="True">
