changed info on twitter and og card to reflect personal and not template defaults

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary"/>
 	<meta name="twitter:site" content="@pranavrele"/>
-	<meta name="twitter:title" content="Gist"/>
-	<meta name="twitter:description" content="vCard Template by Pranav Rele"/>
-	<meta name="twitter:image" content="pranavrele.com/img/profile_twitter.png"/>
+	<meta name="twitter:title" content="Pranav Rele"/>
+	<meta name="twitter:description" content="Personal Site"/>
+	<meta name="twitter:image" content="http://pranavrele.com/img/profile_twitter.png"/>
 	
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Gist">
-	<meta property="og:description" content="vCard Template by Pranav Rele">
-	<meta property="og:url" content="http://pranavrele.com/gist">
-	<meta property="og:site_name" content="Gist | vCard">
-	<meta property="og:image" content="pranavrele.com/img/profile_og.jpg">
+	<meta property="og:title" content="Pranav Rele - Welcome">
+	<meta property="og:description" content="Personal Site">
+	<meta property="og:url" content="http://pranavrele.com">
+	<meta property="og:site_name" content="Pranav Rele">
+	<meta property="og:image" content="http://pranavrele.com/img/profile_og.jpg">
 	
 	<!-- Mobile -->
 	<meta name="HandheldFriendly" content="True">
