changed og title to conform with twitter card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Pranav Rele - Welcome">
+	<meta property="og:title" content="Pranav Rele">
 	<meta property="og:description" content="Personal Site">
 	<meta property="og:url" content="http://pranavrele.com">
 	<meta property="og:site_name" content="Pranav Rele">
