changed twitter card image to conform to requirements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="twitter:site" content="@pranavrele"/>
 	<meta name="twitter:title" content="Pranav Rele"/>
 	<meta name="twitter:description" content="Personal Site"/>
-	<meta name="twitter:image" content="http://pranavrele.com/img/profile_twitter.png"/>
+	<meta name="twitter:image" content="http://pranavrele.com/img/profile_twitter.jpg"/>
 	
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
