--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<!-- General -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title> Pranav Rele - Welcome </title>
-	<meta name="description" content="vCard Template by Pranav Rele">
+	<title> Pranav Rele </title>
+	<meta name="description" content="Personal Site">
 	
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary"/>
