disabled hover on touch devices and prepended jquery to main js script to decrease number of server requests

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">	
+<html lang="en" class="no-js can-touch">	
 	
 	<head>
 
@@ -118,8 +118,8 @@
 			</div>
 		</div>
    
-		<script src="js/jquery.min.js"></script>
-		<script src="js/min/gist-min.js"></script>
+		<!-- Scripts -->
+		<script src="js/gist-min.js"></script>
 		
 	</body>
 </html>
